Header not fixed on mobile

--- a/resources/styles/_components.header.scss
+++ b/resources/styles/_components.header.scss
@@ -4,10 +4,14 @@
 .c-header {
   padding-bottom: $unit-large;
   padding-top: $unit-huge;
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   z-index: -1;
+
+  @include mq($from: desktop) {
+    position: fixed;
+  }
 }
 
   .c-header__logo {
